[project]
name = "agent-chat-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.2",
    "pydantic-settings>=2.10.1",
    "pytablewriter>=1.2.1",
    "python-dotenv>=1.0.1",
    "simplesqlite>=1.5.4",
]
